--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -6,4 +6,4 @@
   <p>$<%= snack.price %><p>
 <% end %>
 
-<h5>Average Price of Snacks: <%=@machine.average%>
+<h5>Average Price of Snacks: $<%=@machine.average_snack_price%>
